--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "elasticsearch/elasticsearch": "^5.3",
         "fideloper/proxy": "~3.3",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/passport": "^4.0",
+        "laravel/tinker": "~1.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
