--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:JKQh54dbQNz/5eiNETbMXf9+8IYE0rtIkOSUHlmfYG4=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=120.92.139.36
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=pytdb
+DB_USERNAME=pytdbuser
+DB_PASSWORD=63pbsZWuzGCPfBxs/I5J
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,3 +32,33 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+#API域名
+API_DOMAIN=pyt.local.com
+#中转域名
+REDIRECT_DOMAIN=pytwx.local.com
+#微信单页域名，以半角逗号分隔(,)
+WECHAT_DOMAINS=pytwx1.local.com,pytwx2.local.com,pyt.d1.natapp.cc
+
+#短信发送相关配置
+SMS_ACCESSKEYID = LTAINU7KKNSme2iH
+SMS_ACCESSKEYSECRET = zKQLoTes3v6mywhQadt1bsbc9kKPib
+#短信签名
+SMS_SIGNNAME = 推单客
+#短信验证码过期时间
+SMS_CODE_EXPIRE_TIME = 5
+
+#淘宝账号配置
+TAOBAO_OPEN_APPKEY = 23225630
+TAOBAO_OPEN_SECRETKEY = 93fee8926d98bfb23c05628f701c4b0d
+
+#新浪微博开放平台配置
+SINA_OPEN_KEY = 2307231472
+
+#es配置
+ELASTICSEARCH_HOST = 120.92.139.36:9200
+
+#代理ip配置
+#PROXY_IP = 61.132.93.14:6218
+#代理ip获取地址
+PROXY_IP_URL = http://dynamic.goubanjia.com/dynamic/get/4b42767ae5ae9f10345782f0e6d7a116.html?random=yes
